# aoc_2023_cpp

./: CMakeLists.txt  CMakePresets.json
common/: CMakeLists.txt
common/include/: file_utils.h  lib.h  string_utils.h
common/src/: file_utils.cpp  lib.cpp  string_utils.cpp
day_1/: CMakeLists.txt
day_1/include/: spelled_numbers.h
day_1/src/: main.cpp  spelled_number.cpp  spelled_numbers.cpp
day_10/: CMakeLists.txt
day_11/: CMakeLists.txt
day_12/: CMakeLists.txt
day_13/: CMakeLists.txt
day_14/: CMakeLists.txt
day_15/: CMakeLists.txt
day_16/: CMakeLists.txt
day_17/: CMakeLists.txt
day_18/: CMakeLists.txt
day_19/: CMakeLists.txt
day_2/: CMakeLists.txt
day_2/include/: game.h
day_2/src/: game.cpp  main.cpp
day_20/: CMakeLists.txt
day_21/: CMakeLists.txt
day_22/: CMakeLists.txt
day_23/: CMakeLists.txt
day_24/: CMakeLists.txt
day_25/: CMakeLists.txt
day_3/: CMakeLists.txt
day_4/: CMakeLists.txt
day_5/: CMakeLists.txt
day_6/: CMakeLists.txt
day_7/: CMakeLists.txt
day_8/: CMakeLists.txt
day_9/: CMakeLists.txt
scripts/: append_main_cmake.py  create_chapters.py
template/: CMakeLists.txt
