cmake_minimum_required(VERSION 3.27)

if (NOT DEFINED CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 20)
endif()

set(CMAKE_CXX_EXTENSIONS OFF)

project("aoc_2023_cpp" VERSION 0.1)

add_subdirectory("day_1")
add_subdirectory("day_2")
add_subdirectory("day_3")
add_subdirectory("day_4")
add_subdirectory("day_5")
add_subdirectory("day_6")
add_subdirectory("day_7")
add_subdirectory("day_8")
add_subdirectory("day_9")
add_subdirectory("day_10")
add_subdirectory("day_11")
add_subdirectory("day_12")
add_subdirectory("day_13")
add_subdirectory("day_14")
add_subdirectory("day_15")
add_subdirectory("day_16")
add_subdirectory("day_17")
add_subdirectory("day_18")
add_subdirectory("day_19")
add_subdirectory("day_20")
add_subdirectory("day_21")
add_subdirectory("day_22")
add_subdirectory("day_23")
add_subdirectory("day_24")
add_subdirectory("day_25")
